@@ -26,7 +26,6 @@ import static de.tudarmstadt.ukp.inception.websocket.config.WebSocketConstants.T
 import static de.tudarmstadt.ukp.inception.websocket.config.WebSocketConstants.TOPIC_ELEMENT_PROJECT;
 import static de.tudarmstadt.ukp.inception.websocket.config.WebSocketConstants.TOPIC_ELEMENT_USER;
 import static java.lang.Integer.MAX_VALUE;
-import static java.util.stream.Collectors.toList;
 
 import java.io.IOException;
 import java.security.Principal;
@@ -275,21 +274,22 @@ public class DiamWebsocketController
         throws IOException
     {
         var doc = documentService.getSourceDocument(aProject.getId(), aDocumentId);
-        var user = userRepository.getUserOrCurationUser(aDataOwner);
+        var sessionOwner = userRepository.getCurrentUsername();
+        var dataOwner = userRepository.getUserOrCurationUser(aDataOwner);
 
         var cas = documentService.readAnnotationCas(doc, aDataOwner);
 
-        var prefs = userPreferencesService.loadPreferences(doc.getProject(), user.getUsername(),
+        var prefs = userPreferencesService.loadPreferences(doc.getProject(), sessionOwner,
                 Mode.ANNOTATION);
 
         var layers = schemaService.listSupportedLayers(aProject).stream()
                 .filter(AnnotationLayer::isEnabled) //
-                .filter(l -> !prefs.getHiddenAnnotationLayerIds().contains(l.getId()))
-                .collect(toList());
+                .filter(l -> !prefs.getHiddenAnnotationLayerIds().contains(l.getId())) //
+                .toList();
 
         var request = RenderRequest.builder() //
                 .withSessionOwner(userRepository.getCurrentUser()) //
-                .withDocument(doc, user) //
+                .withDocument(doc, dataOwner) //
                 .withWindow(aViewportBegin, aViewportEnd) //
                 .withCas(cas) //
                 .withVisibleLayers(layers) //
